Fix navburger issue, overflow was not hidden.

--- a/Documents/style/stylesheet.css
+++ b/Documents/style/stylesheet.css
@@ -1,6 +1,7 @@
 *{
 	padding: 0;
 	padding-inline-start: 0; 
+	box-sizing: border-box;
 }
 body{ 
 	background-color: black;
@@ -180,12 +181,12 @@ hr{
 		height: 92vh;
 		top: 8vh;
 		background-color: black;
-		display: flex;
+		display: none;
 		flex-direction: column;
 		align-items: center;
-		width: 35%;
+		width: 40%;
 		transform: translateX(100%);
-		transition: transform 0.3s ease-in;
+		transition: transform 0.1s ease-in;
 	}
 	.nav-links li{
 		opacity: 0;
@@ -203,6 +204,7 @@ hr{
 
 .nav-active{
 	transform: translateX(0);
+	display: flex;
 }
 @keyframes navLinkFade{
 	from{
